--- a/.github/workflows/update-appstore.yml
+++ b/.github/workflows/update-appstore.yml
@@ -53,7 +53,7 @@ jobs:
         if: steps.check_changes.outputs.changed == 'true'
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUBTOKEN }}
           commit-message: 'chore: update appstore.json'
           title: 'Update App Store JSON'
           body: |
